2003-08-29  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7rc1.

2003-08-26  Dave Peticolas  <dave@krondo.com>

	* doc/howto/xmlrpc.html: document sub-handler and introspection

	* twisted/test/test_xmlrpc.py: test introspection support

	* twisted/web/xmlrpc.py: implement sub-handlers and introspection
	support

2003-08-23  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py: force timeout values to be
	integers, because recent pygtk's complain when they get floats

2003-08-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha5.

2003-08-18  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/protocols/imap4.py: Remove support code for old versions
	of IMailbox.fetch(); also change the interface once again (no
	backwards compat this time) to require sequence numbers to be
	returned, not just whatever the MessageSet spit out.

2003-08-16  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_import.py: update for enterprise

	* twisted/enterprise/sqlreflector.py: use dbpool directly

	* twisted/enterprise/row.py: deprecate KeyFactory and StatementBatch

	* twisted/enterprise/dbpassport.py: remove

	* twisted/enterprise/dbgadgets.py: deprecate all

	* twisted/enterprise/dbcred.py: deprecate all

	* twisted/enterprise/adbapi.py: deprecate Augmentation. deprecate
	crufty bits of ConnectionPool API.

2003-08-11  Dave Peticolas  <dave@krondo.com>

	* twisted/enterprise/sqlreflector.py: fix docs

2003-08-08  Donovan Preston  <dp@twistedmatrix.com>

	* Added getAllPatterns API to Widget, which returns all nodes
	which have the given pattern name.

	* Refactored List widget to use getAllPatterns, so you can have
	more than one listHeader, listFooter, and emptyList node.

2003-08-08  Dave Peticolas  <dave@krondo.com>

	* twisted/internet/base.py: remove unused internal function.

	* twisted/internet/gladereactor.py: remove unused internal function.
	clean up imports.
